# Simple-CPP-Networking-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/chat/: CMakeLists.txt  client_main.cpp  server_main.cpp
include/simplenet/: Client.h  Connection.h  Packet.h  Server.h
src/: Client.cpp  Connection.cpp  Packet.cpp  Server.cpp
tests/: CMakeLists.txt  test_client.cpp  test_packet.cpp  test_server.cpp
